Build a UI for pruning date formatted roots of old directories

--- a/src/main/resources/org/jenkinsci/plugins/publishoverdropbox/impl/DropboxTransfer/config.properties
+++ b/src/main/resources/org/jenkinsci/plugins/publishoverdropbox/impl/DropboxTransfer/config.properties
@@ -27,7 +27,9 @@ removePrefix.title=Remove prefix
 remoteDirectory.title=Remote directory
 excludes.title=Exclude files
 flatten.title=Flatten files
-remoteDirectorySDF.title=Remote directory<br />is a date format
+remoteDirectorySDF.title=Remote directory is a date format
 cleanRemote.title=Clean remote
 transfers.envVars=All of the transfer fields support substitution of \
    <a href="{0}/env-vars.html" target="_blank">Jenkins environment variables</a>
+pruneRoot.title=Remove old directories in remote root
+pruneDays.title=Max age
