prototype pruning old folders on date format targets

--- a/src/main/resources/org/jenkinsci/plugins/publishoverdropbox/impl/DropboxTransfer/config.properties
+++ b/src/main/resources/org/jenkinsci/plugins/publishoverdropbox/impl/DropboxTransfer/config.properties
@@ -32,4 +32,4 @@ cleanRemote.title=Clean remote
 transfers.envVars=All of the transfer fields support substitution of \
    <a href="{0}/env-vars.html" target="_blank">Jenkins environment variables</a>
 pruneRoot.title=Remove old directories in remote root
-pruneDays.title=Max age
+pruneDays.title=Max days
