--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     </parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>publish-over-dropbox</artifactId>
-    <version>1.0-rc3</version>
+    <version>1.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
 
     <name>Publish Over Dropbox</name>
